@@ -302,23 +302,23 @@ static void			splash_leaving(t_bunny_response		resp,
 const t_bunny_context		gl_bunny_splash_context =
   {
     (t_bunny_key)splash_key,
-    NULL,
+    bunny_context_type,
     (t_bunny_click)splash_click,
-    NULL,
-    NULL,
-    NULL,
-    NULL,
-    NULL,
-    NULL,
-    NULL,
-    NULL,
+    bunny_context_move,
+    bunny_context_wheel,
+    bunny_context_joy_connect,
+    bunny_context_joy_button,
+    bunny_context_joy_axis,
+    bunny_context_get_focus,
+    bunny_context_lost_focus,
+    bunny_context_resize,
     (t_bunny_loop)splash_loop,
     (t_bunny_display)splash_display,
+    bunny_context_close,
     NULL,
-    NULL,
-    NULL,
-    NULL,
+    bunny_context_message,
+    bunny_context_connect,
     (t_bunny_loop)splash_entering,
     (t_bunny_leaving_context)splash_leaving,
-    NULL
+    bunny_context_async_computation
   };
